# starlette-static-resources

./: .gitignore  README.md  pyproject.toml
example/: pyproject.toml
example/example/: app.py
example/example/data/: some_data.txt
tests/: test_starlette_static_resources.py
