[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["david <davidventura27@gmail.com>"]
include = ["example/data/some_data.txt"]

[tool.poetry.dependencies]
python = ">=3.6"
starlette-static-resources = {path = ".."}
uvicorn = "^0.13.4"
importlib-resources = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
